--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-	"name": "appeal-chat",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "node server/server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"engines":{
-	"node": "6.10.0"
-	},
-	"author": "",
-	"license": "",
-	"dependencies": {
-	"express": "^4.15.2"
-	}
+  "name": "appeal-chat",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server/server.js",
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
+  },
+  "engines": {
+    "node": "6.10.0"
+  },
+  "author": "",
+  "license": "",
+  "dependencies": {
+    "express": "^4.15.2"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.11.0"
+  }
 }
